SERVER-21772 correctly profile and log findAndModify operations